[gd_scene load_steps=5 format=2]

[ext_resource path="res://Snow.png" type="Texture" id=1]
[ext_resource path="res://New Piskel-1.png.png" type="Texture" id=2]
[ext_resource path="res://Strength.tres" type="DynamicFont" id=3]
[ext_resource path="res://Win.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -35.1234
margin_top = -12.9686
margin_right = 356.877
margin_bottom = 219.031
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 2000
lifetime = 8.0
speed_scale = 0.5
texture = ExtResource( 2 )
emission_shape = 3
emission_points = PoolVector2Array( 0, 0, 10, 0, 20, 0, 30, 0, 40, 0, 50, 0, 60, 0, 70, 0, 80, 0, 90, 0, 100, 0, 110, 0, 120, 0, 130, 0, 140, 0, 150, 0, 160, 0, 170, 0, 180, 0, 190, 0, 200, 0, 210, 0, 220, 0, 230, 0, 240, 0, 250, 0, 260, 0, 270, 0, 280, 0, 290, 0, 300, 0, 310, 0, 320, 0, 330, 0, 340, 0 )
emission_colors = PoolColorArray(  )
scale_amount = 0.3
color = Color( 0.686275, 0.937255, 0.921569, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 129.686
margin_top = 12.9686
margin_right = 174.686
margin_bottom = 26.9686
custom_fonts/font = ExtResource( 3 )
text = "You Win!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 99.4263
margin_top = 54.036
margin_right = 139.426
margin_bottom = 68.036
custom_fonts/font = ExtResource( 3 )
text = "Kills"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 96.7245
margin_top = 89.1594
margin_right = 150.724
margin_bottom = 103.159
custom_fonts/font = ExtResource( 3 )
text = "Congrats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton" type="LinkButton" parent="."]
margin_left = 131.848
margin_top = 148.059
margin_right = 171.848
margin_bottom = 162.059
custom_fonts/font = ExtResource( 3 )
text = "Back to Title"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LinkButton" to="." method="_on_LinkButton_pressed"]
